Finaliza Atividade 1: Criação de curso e atividades (single e multiple choice)